Show matching progress

--- a/geoContrast.html
+++ b/geoContrast.html
@@ -541,7 +541,7 @@
 						<div id="source-contents" class="row box" style="width:100%; margin:0px 0px">
 							<div id="source-contents-banner" style="width:100%; text-align:center">
 								<h2 style="margin-bottom:5px">Matches (<span class="tooltip" data-text="Each boundary unit is matched to the boundary unit in the other source with the highest shared area overlap. The share of total overlapping area of matching units is then used to calculate the total source match. E.g., a 66% match means that only two-thirds of the area covered by both sources are considered matching/overlapping.">?</span>)</h2>
-								<div id="total-similarity" class="stats-percent" style="height:20px; width:40%"><span style="--data-width:0%"></span><p>Finding matches...</p></div>
+								<div id="total-similarity" class="stats-percent" style="height:20px; width:40%"><span style="--data-width:0%"></span><p>...</p></div>
 								<br><br>
 							</div>
 							<div id="left-table-header" style="width:45%">
