--- a/gbContribute.html
+++ b/gbContribute.html
@@ -81,8 +81,8 @@
                             For more information, please review the <a href="https://github.com/wmgeolab/geoBoundaries/blob/main/CONTRIBUTING.md" target='_blank'>Guidelines for Submission</a>. 
                         </p>
                     
-                        <!--https://gbcontributebackend.herokuapp.com-->
-                        <form id="contribute-form" action="https://gbcontributebackend.herokuapp.com/api_contribute/" method="post" enctype="multipart/form-data">
+                        <!--https://geoboundary-contributions.herokuapp.com-->
+                        <form id="contribute-form" action="https://geoboundary-contributions.herokuapp.com/api_contribute/" method="post" enctype="multipart/form-data">
                             <!--the 'enctype' attribute above is necessary for django to receive the file-->
                             <div id="contribute-tab-container" class="tab-container" style="height:80%; overflow:auto">
         
