More prominent link for user contributions

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 						<ul class="actions">
 							<li><a href="index.html#getdata" class="button big">Download the Data</a></li>
 							<li><a href="geoContrast.html" class="button big">Visualize the Data</a></li>
+							<li><a href="https://github.com/wmgeolab/geoBoundaries#getting-involved" class="button big">Contribute to the Data</a></li>
 						</ul>
 					</div>
 
