--- a/geoContrast.html
+++ b/geoContrast.html
@@ -141,28 +141,30 @@
 														};
 													});
 												</script>
-												<div class="popup-content" style="height:90%; overflow:auto; font-size:medium">
-													<div class="box">
+												<div class="popup-content" style="height:90%; font-size:medium; overflow:hidden">
+													<div class="box" style="height:100%">
 														<hr style="border-color:#319FD3; background-color:#319FD3; margin:3px; height:3px">
 														<h3>Select a source for the main boundary:</h3>
-														<!--
-														<button>From Datasets</button>
-														<button>Local File</button>
-														-->
-														<table id="gb-sources-table" class="table">
-															<thead>
-																<th></th>
-																<th>Source</th>
-																<th>License</th>
-																<th>Year</th>
-																<th>Updated</th>
-																<th>Admin. Units</th>
-																<th>Line Resolution</th>
-																<th>Vertex Density</th>
-															</thead>
-															<tbody>
-															</tbody>
-														</table>
+														<div style="height:90%; overflow:auto; font-size:small">
+															<!--
+															<button>From Datasets</button>
+															<button>Local File</button>
+															-->
+															<table id="gb-sources-table" class="table">
+																<thead>
+																	<th></th>
+																	<th>Source</th>
+																	<th>License</th>
+																	<th>Year</th>
+																	<th>Updated</th>
+																	<th>Admin. Units</th>
+																	<th>Line Resolution</th>
+																	<th>Vertex Density</th>
+																</thead>
+																<tbody>
+																</tbody>
+															</table>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -213,28 +215,30 @@
 														};
 													});
 												</script>
-												<div class="popup-content" style="height:90%; overflow:auto; font-size:medium">
-													<div class="box">
+												<div class="popup-content" style="height:90%; font-size:medium; overflow:hidden">
+													<div class="box" style="height:100%">
 														<hr style="border-color:rgb(255,0,0); background-color:rgb(255,0,0); margin:3px; height:3px">
 														<h3>Select a source for the comparison boundary:</h3>
 														<!--
 														<button>From Datasets</button>
 														<button>Local File</button>
 														-->
-														<table id="comparison-sources-table" class="table">
-															<thead>
-																<th></th>
-																<th>Source</th>
-																<th>License</th>
-																<th>Year</th>
-																<th>Updated</th>
-																<th>Admin. Units</th>
-																<th>Line Resolution</th>
-																<th>Vertex Density</th>
-															</thead>
-															<tbody>
-															</tbody>
-														</table>
+														<div style="height:90%; overflow:auto; font-size:small">
+															<table id="comparison-sources-table" class="table">
+																<thead>
+																	<th></th>
+																	<th>Source</th>
+																	<th>License</th>
+																	<th>Year</th>
+																	<th>Updated</th>
+																	<th>Admin. Units</th>
+																	<th>Line Resolution</th>
+																	<th>Vertex Density</th>
+																</thead>
+																<tbody>
+																</tbody>
+															</table>
+														</div>
 													</div>
 												</div>
 											</div>
