Handle arbitrary projections via prj file when uploading

--- a/geoContrast.html
+++ b/geoContrast.html
@@ -120,7 +120,7 @@
 												<span class="fas fa-file" style="padding:0px 3px important!; margin-left:10px; width:auto">
 													<input id="gb-file-input" class="fas" type="file" accept=".zip">
 												</span>
-												<span data-text="Upload a zipped shapefile.  Expects WGS84 (EPSG 4326)." class="tooltip">
+												<span data-text="Upload a zipped shapefile." class="tooltip">
 													(?)
 												</span>
 												<select id="gb-file-select" onchange="gbFileDropdownChanged()" style="width:90%; margin-top:10px; margin-left:20px">
@@ -194,7 +194,7 @@
 												<span class="fas fa-file" style="padding:0px 3px important!; margin-left:10px; width:auto">
 													<input id="comparison-file-input" class="fas" type="file" accept=".zip">
 												</span>
-												<span data-text="Upload a zipped shapefile.  Expects WGS84 (EPSG 4326)." class="tooltip">
+												<span data-text="Upload a zipped shapefile." class="tooltip">
 													(?)
 												</span>
 												<select id="comparison-file-select" onchange="comparisonFileDropdownChanged()" style="width:90%; margin-top:10px; margin-left:20px">
