--- a/gbContribute.html
+++ b/gbContribute.html
@@ -343,6 +343,9 @@
 	<script src="assets/js/shp2geojson/preprocess.js"></script>
 	<script src="assets/js/shp2geojson/preview.js"></script>
 
+    <!-- alternatively use shapefile-js -->
+	<script src="https://unpkg.com/shpjs@latest/dist/shp.js"></script>
+
 	<!--this is for dynamic boundary stats-->
 	<!--<script src="https://cdn.jsdelivr.net/npm/@turf/turf@5/turf.min.js"></script>-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Turf.js/6.5.0/turf.min.js" integrity="sha512-Q7HOppxoH0L2M7hreVoFCtUZimR2YaY0fBewIYzkCgmNtgOOZ5IgMNYxHgfps0qrO1ef5m7L1FeHrhXlq1I9HA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
