--- a/geoContrast.html
+++ b/geoContrast.html
@@ -402,10 +402,52 @@
 							<h2 id="country-header-for-printing" style="position:absolute; top:8px; left:8px; background-color:rgba(255,255,255,0.7)"></h2>
 						</div>
 					</div>
+
+					<style>
+						.summarystat {
+							text-align: center;
+							width: 100px;
+							height: 80px;
+							margin: 10px;
+						}
+					</style>
+
+					<div id="source-summary" class="row box" style="width:100%; margin:0px 0px">
+						<div id="source-summary-banner" style="width:100%; text-align:center">
+							<h2 style="margin-bottom: 4px;">
+								<span class="gb-source-title" style="font-style:italic">None</span> 
+							</h2>
+							<span style="font-style:italic; color:gray">Compared to <span class="comp-source-title">None</span></span>
+						</div>
+						<div id="source-summary-div" style="width:98%; display:flex; flex-direction:row; justify-content:space-evenly">
+							<div class="summarystat">
+								<h2 id="summary-level">=</h2>
+								<span><a href="#source-overview">Admin level</a></span>
+							</div>
+							<div class="summarystat">
+								<h2 id="summary-year">+3y</h2>
+								<span><a href="#source-overview">Boundary Year</a></span>
+							</div>
+							<div class="summarystat">
+								<h2 id="summary-boundarycount">+25%</h2>
+								<span><a href="#source-stats">Admin count</a></span>
+							</div>
+							<div class="summarystat">
+								<h2 id="summary-lineres">-500m</h2>
+								<span><a href="#source-stats">Line Resolution</a></span>
+							</div>
+							<div class="summarystat">
+								<h2 id="summary-overlap">86%</h2>
+								<span><a href="#source-contents">Similarity</a></span>
+							</div>
+						</div>
+					</div>
+
+					<br>
 						
 					<div id="source-overview" class="row box" style="width:100%; margin:0px 0px; page-break-after:always">
 						<div id="source-overview-banner" style="width:100%; text-align:center">
-							<h2>Overview</h2>
+							<h2>Metadata</h2>
 						</div>
 						<div id="left-table-div" style="width:45%">
 							<hr style="border-color:#319FD3; background-color:#319FD3; margin:3px; height:3px">
@@ -475,7 +517,7 @@
 
 					<div id="source-stats" class="row box" style="width:100%; margin:0px 0px">
 						<div id="source-stats-banner" style="width:100%; text-align:center">
-							<h2>Statistics</h2>
+							<h2>Boundary Stats</h2>
 						</div>
 						<div id="left-table-div" style="width:45%">
 							<hr style="border-color:#319FD3; background-color:#319FD3; margin:3px; height:3px">
@@ -551,7 +593,7 @@
 
 					<div id="source-contents" class="row box" style="width:100%; margin:0px 0px">
 						<div id="source-contents-banner" style="width:100%; text-align:center">
-							<h2 style="margin-bottom:5px">Matches (<span class="tooltip" data-text="Each boundary unit is matched to the boundary unit in the other source with the highest shared area overlap. The share of total overlapping area of matching units is then used to calculate the total source match. E.g., a 66% match means that only two-thirds of the area covered by both sources are considered matching/overlapping.">?</span>)</h2>
+							<h2 style="margin-bottom:5px">Boundary Agreement (<span class="tooltip" data-text="Each boundary unit is matched to the boundary unit in the other source with the highest shared area overlap. The share of total overlapping area of matching units is then used to calculate the total source match. E.g., a 66% match means that only two-thirds of the area covered by both sources are considered matching/overlapping.">?</span>)</h2>
 							<div id="total-similarity" class="stats-percent" style="height:20px; width:40%"><span style="--data-width:0%"></span><p>Initiating...</p></div>
 							<br><br>
 						</div>
