Update summary match overlap

--- a/geoContrast.html
+++ b/geoContrast.html
@@ -415,7 +415,7 @@
 					<div id="source-summary" class="row box" style="width:100%; margin:0px 0px">
 						<div id="source-summary-banner" style="width:100%; text-align:center">
 							<h2 style="margin-bottom: 4px;">
-								<span class="gb-source-title" style="font-style:italic">None</span> 
+								<span class="gb-source-title" style="font-style:normal">-</span> 
 							</h2>
 							<span style="font-style:italic; color:gray">Compared to <span class="comp-source-title">None</span></span>
 						</div>
@@ -437,7 +437,7 @@
 								<span><a href="#source-stats">Line Resolution</a></span>
 							</div>
 							<div class="summarystat">
-								<h2 id="summary-overlap">86%</h2>
+								<h2 id="summary-similarity">86%</h2>
 								<span><a href="#source-contents">Similarity</a></span>
 							</div>
 						</div>
