--- a/geoContrast.html
+++ b/geoContrast.html
@@ -413,15 +413,21 @@
 					</style>
 
 					<div id="source-summary" class="row box" style="width:100%; margin:0px 0px">
-						<div id="source-summary-banner" style="width:100%; text-align:center">
-							<h2 style="margin-bottom: 4px;">
-								<span class="gb-source-title" style="font-style:normal">-</span> 
-							</h2>
-							<span style="font-style:italic; color:gray">Compared to <span class="comp-source-title">None</span></span>
+						<div id="source-summary-banner" style="display:flex; flex-direction:column; width:100%; align-items:center;">
+							<div style="display:flex; flex-direction:row; align-items:center;">
+								<div style="width:10px; height:10px; background-color:#31add3; margin:10px"></div>
+								<h2 style="margin-bottom: 4px;">
+									<span class="gb-source-title" style="font-style:normal">-</span> 
+								</h2>
+							</div>
+							<div style="display:flex; flex-direction:row; align-items:center;">
+								<div style="width:10px; height:10px; background-color:rgb(255,0,0); margin:10px"></div>
+								<span style="font-style:italic; color:gray">Compared to <span class="comp-source-title">None</span></span>
+							</div>
 						</div>
 						<div id="source-summary-div" style="width:98%; display:flex; flex-direction:row; justify-content:space-evenly">
 							<div class="summarystat">
-								<h2 id="summary-level">=</h2>
+								<h2 id="summary-level">ADM1</h2>
 								<span><a href="#source-overview">Admin level</a></span>
 							</div>
 							<div class="summarystat">
@@ -437,7 +443,7 @@
 								<span><a href="#source-stats">Line Resolution</a></span>
 							</div>
 							<div class="summarystat">
-								<h2 id="summary-similarity">86%</h2>
+								<h2 id="summary-similarity">-</h2>
 								<span><a href="#source-contents">Similarity</a></span>
 							</div>
 						</div>
