Top stat bar icons

--- a/geoContrast.html
+++ b/geoContrast.html
@@ -407,11 +407,13 @@
 						.summarystat {
 							text-align: center;
 							width: 100px;
-							height: 80px;
 							margin: 10px;
 						}
 						.summarystat h2 {
 							margin: 5px;
+						}
+						.summarystat img {
+							height: 50px;
 						}
 					</style>
 
@@ -439,22 +441,27 @@
 						</div>
 						<div id="source-summary-div" style="width:98%; display:flex; flex-direction:row; justify-content:space-evenly">
 							<div class="summarystat">
+								<img style="padding:5px" src="https://cdn-icons-png.flaticon.com/512/1017/1017397.png"/>
 								<h2 id="summary-level">ADM1</h2>
 								<span>Admin level</span>
 							</div>
 							<div class="summarystat">
+								<img src="https://cdn3.iconfinder.com/data/icons/google-material-design-icons/48/ic_history_48px-512.png"/>
 								<h2 id="summary-year">2009</h2>
 								<span>Boundary Year</span>
 							</div>
 							<div class="summarystat">
+								<img style="padding:2px" src="images/count.png" title="Count icon created by Sicon - Flaticon: https://www.flaticon.com/premium-icon/count_2440951"/>
 								<h2 id="summary-boundarycount">12</h2>
 								<span>Admin count</span>
 							</div>
 							<div class="summarystat">
+								<img style="padding:5px" src="https://d338t8kmirgyke.cloudfront.net/icons/icon_pngs/000/000/357/original/linegraph.png"/>
 								<h2 id="summary-lineres">559m</h2>
 								<span>Line Resolution</span>
 							</div>
 							<div class="summarystat">
+								<img src="https://icon-library.com/images/comparison-icon/comparison-icon-18.jpg"/>
 								<h2 id="summary-similarity">-</h2>
 								<span>Similarity</span>
 							</div>
