--- a/geoContrast.html
+++ b/geoContrast.html
@@ -95,6 +95,15 @@
 											<hr id="legend-symbol-comparison"></hr>
 											<span>Comparison boundary</span>
 										</li>
+										<li>
+											<!--note: checkbox class is rendered using a label checkmark character-->
+											<img id="legend-symbol-basemap" src="images/1200px-Picture_icon_BLACK.svg.png"/>
+											<select id="select-basemap" onchange="setBaseMap(this.value)">
+												<option value="maptiler" selected>MapTiler Satellite</option>
+												<option value="esri">ESRI World Street Map</option>
+												<option value="osm">OpenStreetMap</option>
+											</select>
+										</li>
 									</ul>
 								</div>
 							</div>
