Update all top stats bar

--- a/geoContrast.html
+++ b/geoContrast.html
@@ -96,7 +96,6 @@
 											<span>Comparison boundary</span>
 										</li>
 										<li>
-											<!--note: checkbox class is rendered using a label checkmark character-->
 											<img id="legend-symbol-basemap" src="images/1200px-Picture_icon_BLACK.svg.png"/>
 											<select id="select-basemap" onchange="setBaseMap(this.value)">
 												<option value="maptiler" selected>MapTiler Satellite</option>
@@ -438,6 +437,7 @@
 						}
 						.summarystat h2 {
 							margin: 5px;
+							white-space: nowrap;
 						}
 						.summarystat img {
 							height: 50px;
